# fir

./: Cargo.toml  README.md  install.sh
data/: fir.desktop
src/: cli.rs  config.rs  gui.rs  main.rs  meta.rs
src/config/: action.rs  color.rs  grid.rs  keymap.rs  keys.rs
src/gui/: appview.rs  texture.rs
